<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_group_white_24dp"
            android:title="@string/group" />
        <item
            android:id="@+id/nav_room"
            android:icon="@drawable/ic_group_white_24dp"
            android:title="@string/room" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_white_24dp"
            android:title="@string/apply" />

    </group>
    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_white_24dp"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/settings" />

        </menu>
    </item>
</menu>