<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_call"
        android:icon="@drawable/ic_call_white_24dp"
        android:orderInCategory="50"
        android:title="@string/call"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_attachment"
        android:icon="@drawable/ic_attachment_white_24dp"
        android:orderInCategory="100"
        android:title="@string/attachment"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="150"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="150"
        android:title="@string/clear_message"
        app:showAsAction="never"/>

</menu>