<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vm_theme_background"
    android:clipChildren="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/vm_margin_large"
        android:gravity="center"
        android:orientation="vertical">
        <!--产品标示-->
        <ImageView
            android:layout_width="@dimen/vm_avatar_large"
            android:layout_height="@dimen/vm_avatar_large"
            android:layout_margin="@dimen/vm_dimen_36"
            android:src="@mipmap/ic_launcher" />
        <!--欢迎标题-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vm_margin_large"
            android:text="@string/welcome"
            android:textColor="@color/vm_black_87"
            android:textSize="@dimen/vm_size_headline" />
        <!--入口一-->
        <RadioButton
            android:id="@+id/radio_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vm_margin_normal"
            android:checked="true"
            android:text="@string/sign_have_account"
            android:textColor="@color/vm_black_87"
            android:textSize="@dimen/vm_size_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vm_dimen_32"
            android:text="@string/sign_have_account"
            android:textColor="@color/vm_black_54"
            android:textSize="@dimen/vm_size_body" />
        <!--入口二-->
        <RadioButton
            android:id="@+id/radio_not_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vm_margin_normal"
            android:layout_marginTop="@dimen/vm_margin_large"
            android:text="@string/sign_not_account"
            android:textColor="@color/vm_black_87"
            android:textSize="@dimen/vm_size_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vm_dimen_32"
            android:text="@string/sign_not_account"
            android:textColor="@color/vm_black_54"
            android:textSize="@dimen/vm_size_body" />
        <!--进入-->
        <Button
            android:id="@+id/btn_go_on"
            style="@style/VMBtn.Green"
            android:layout_margin="@dimen/vm_margin_large"
            android:text="@string/sign_go_on" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
