<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:id="@+id/layout_current_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vm_dimen_16"
        android:background="@drawable/ripple_rectangle_white"
        android:clickable="true"
        android:padding="@dimen/vm_dimen_16"
        >

        <com.vmloft.develop.library.tools.widget.VMImageView
            android:id="@+id/img_avatar"
            android:layout_width="@dimen/vm_dimen_56"
            android:layout_height="@dimen/vm_dimen_56"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_character_blackcat"
            android:transitionName="@string/shared_element_avatar"
            app:vm_border_width="@dimen/vm_dimen_2"
            app:vm_dispatch_touch_event="false"
            app:vm_shape_type="round"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/img_avatar"
            android:gravity="center_vertical"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/text_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textColor="@color/vm_black_87"
                android:textSize="@dimen/vm_size_16"
                />
            <TextView
                android:id="@+id/text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/vm_black_54"
                android:textSize="@dimen/vm_size_12"
                />

            <TextView
                android:id="@+id/text_signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/vm_black_54"
                android:textSize="@dimen/vm_size_12"
                />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_qr_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vm_dimen_48"
        android:layout_marginTop="@dimen/vm_dimen_16"
        android:background="@drawable/ripple_rectangle_white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vm_dimen_16"
            android:src="@drawable/ic_qr_code"
            android:tint="@color/vm_red_87"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vm_dimen_16"
            android:text="@string/qr_code"
            android:textColor="@color/vm_black_54"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vm_dimen_48"
        android:layout_marginTop="@dimen/vm_dimen_8"
        android:background="@drawable/ripple_rectangle_white"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vm_dimen_16"
            android:src="@drawable/ic_settings_white_24dp"
            android:tint="@color/vm_red_87"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vm_dimen_16"
            android:text="@string/settings"
            android:textColor="@color/vm_black_54"
            />
    </LinearLayout>
</LinearLayout>