<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vm_theme_background_light"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    >

    <!--公共的 Toolbar 控件-->
    <include layout="@layout/widget_toolbar_communal"/>

    <RelativeLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/vm_dimen_16"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/vm_dimen_16"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_sign_up"
                    android:textColor="@color/vm_green_87"
                    android:textSize="@dimen/vm_size_14"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vm_dimen_16"
                    android:textColor="@color/vm_black_87"
                    android:textColorHint="@color/vm_black_38"
                    >

                    <EditText
                        android:id="@+id/edit_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        android:inputType="textImeMultiLine"
                        android:textColor="@color/vm_black_87"
                        android:textColorHint="@color/vm_black_38"
                        android:textSize="@dimen/vm_size_16"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/vm_black_87"
                    android:textColorHint="@color/vm_black_38"
                    >

                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword|textImeMultiLine"
                        android:textColor="@color/vm_black_87"
                        android:textColorHint="@color/vm_black_38"
                        android:textSize="@dimen/vm_size_16"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/vm_dimen_48"
                    android:layout_marginBottom="@dimen/vm_margin_large"
                    android:layout_marginTop="@dimen/vm_margin_large"
                    android:alpha="0.5"
                    android:enabled="false"
                    android:text="@string/sign_go_on"
                    android:theme="@style/VMBtn.Red"
                    />

                <TextView
                    android:id="@+id/text_sign_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/vm_margin_normal"
                    android:text="@string/sign_privacy_and_agreement"
                    android:textSize="@dimen/vm_size_12"
                    />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>