<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/vm_dimen_8"
    android:gravity="center_vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|bottom"
        android:orientation="horizontal"
        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:id="@+id/layout_bubble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bubble_msg_send"
                android:gravity="right"
                android:orientation="vertical"
                android:paddingLeft="@dimen/vm_dimen_8"
                android:paddingRight="@dimen/vm_dimen_16"
                android:paddingTop="@dimen/vm_dimen_8"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <!--通话消息内容-->
                    <TextView
                        android:id="@+id/text_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:maxWidth="@dimen/vm_dimen_256"
                        android:text="@string/app_name"
                        android:textColor="@color/vm_white_87"
                        android:textSize="@dimen/vm_size_14"
                        />
                    <!--通话类型图标-->
                    <ImageView
                        android:id="@+id/img_call_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/vm_dimen_8"
                        android:src="@drawable/ic_call_white_24dp"
                        android:tint="@color/vm_red_54"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vm_dimen_2"
                    android:layout_marginTop="@dimen/vm_dimen_4"
                    android:gravity="right"
                    android:orientation="horizontal"
                    >
                    <!--消息发送者名称-->
                    <TextView
                        android:id="@+id/text_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/vm_dimen_8"
                        android:text="@string/hint_username"
                        android:textColor="@color/vm_white_54"
                        android:textSize="@dimen/vm_size_10"
                        />
                    <!--消息时间-->
                    <TextView
                        android:id="@+id/text_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_time"
                        android:textColor="@color/vm_white_54"
                        android:textSize="@dimen/vm_size_10"
                        />
                </LinearLayout>
            </LinearLayout>
            <!--消息发送者头像-->
            <com.vmloft.develop.library.tools.widget.VMImageView
                android:id="@+id/img_avatar"
                android:layout_width="@dimen/vm_dimen_40"
                android:layout_height="@dimen/vm_dimen_40"
                android:src="@drawable/ic_character_blackcat"
                android:transitionName="@string/shared_element_avatar"
                app:vm_border_color="@color/vm_white_87"
                app:vm_border_width="@dimen/vm_dimen_2"
                app:vm_dispatch_touch_event="false"
                app:vm_shape_type="round"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>